# voodoo-anthropic-hack-winner

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  Sensor Tower API Reference.html  pyproject.toml
api/: main.py
app/: __init__.py  _cache.py  _fixtures.py  _paths.py  models.py  pipeline.py
app/analysis/: __init__.py  archetypes.py  deconstruct.py  game_dna.py  game_fit.py
app/creative/: __init__.py  brief.py  scenario.py  scenario_compare.py  video_brief.py
app/sources/: __init__.py  sensortower.py  voodoo.py
data/cache/briefs/: brief_challenge-animation_6754363534__b5d4f5ae.json  brief_challenge-animation_6754558455__da6ba4cc.json  brief_challenge-in-game_1345968745_bench15__bccde651.json  brief_challenge-mixed_1235581326_bench15__4586e51b.json  brief_curiosity-animation_1342468799_bench6__d4db751f.json  brief_curiosity-animation_1345968745_bench15__0e9d7476.json  brief_curiosity-animation_1345968745_bench15__94c95b44.json  brief_curiosity-animation_1423046460_bench15__13750b5d.json  brief_curiosity-mixed_1563230518__6f520518.json  (+104 more)
docs/: hooklens-pipeline-data-contract.md  hooklens-spec.md  scenario-data-contract.md  sensortower-api.md
front/: bun.lockb  package-lock.json  package.json
front/src/: routeTree.gen.ts  styles.css
notebooks/: 01_gemini_smoke.py  02_pipeline_e2e.py
scripts/: animate_endcards.py  compare_models.py  compare_video_models.py  generate_demo_video.py  generate_endcards.py  generate_soundtrack.py  precache.py  precache_trending_ads.py  precache_voodoo_ads.py  probe_scenario_video_models.py  scan_top_competitors.py
(+1814 files in other folders)
